--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <!-- Teks Berjalan -->
 <div class="scrolling-text">
-  <p>𝐊𝐀𝐋𝐀𝐔 𝐌𝐄𝐍𝐀𝐍𝐆 𝐊𝐀𝐓𝐀𝐊𝐀𝐍 𝐌𝐄𝐍𝐀𝐍𝐆, 𝐊𝐀𝐋𝐀𝐔 𝐊𝐀𝐋𝐀𝐇 𝐊𝐀𝐓𝐀𝐊𝐀𝐍 𝐊𝐀𝐋𝐀𝐇.</p>
+  <p>𝐊𝐚𝐥𝐚𝐮 𝐦𝐞𝐧𝐚𝐧𝐠 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐦𝐞𝐧𝐚𝐧𝐠. 𝐊𝐚𝐥𝐚𝐮 𝐤𝐚𝐥𝐚𝐡 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐤𝐚𝐥𝐚𝐡 𝐃𝐎𝐍𝐓𝐒 𝐅𝐀𝐋𝐒𝐄 𝐌𝐎𝐃𝐄𝐒𝐓𝐘.</p>
 </div>
 
 <div class="container">
