--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
 
     <button onclick="tambahData()">Tambah</button>
     <button style="background:red;color:white" onclick="resetAll()">RESET ALL</button>
+  <!-- RANGKUMAN DIATAS TABEL -->
+  <div class="summary" id="summaryList"></div>
 
-    <table id="tabelData">
-      <thead>
-        <tr>
-          <th>Nama</th>
-          <th>Status</th>
-          <th>Jumlah Bet</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-
-    <div class="summary" id="summaryList"></div>
+  <table id="tabelData">
+    <thead>
+      <tr>
+        <th>Nama</th>
+        <th>Status</th>
+        <th>Jumlah Bet</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
   </div>
 
   <div class="side-card">
