--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>𝐏𝐄𝐁𝐄𝐋𝐈𝐀𝐑 𝐓𝐀𝐍𝐆𝐆𝐔𝐇 𝐋𝐗𝐆𝐑𝐎𝐔𝐏</title>
-
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -32,12 +31,10 @@
     0% { transform: translateX(100%); }
     100% { transform: translateX(-100%); }
   }
-
   .main-wrapper {
     display: flex;
     gap: 20px;
   }
-
   .container {
     flex: 3;
     background: rgba(255,255,255,0.05);
@@ -53,7 +50,6 @@
     box-shadow: 0 0 10px #00eaff;
     height: fit-content;
   }
-
   input, select {
     width: 100%;
     padding: 10px;
@@ -63,7 +59,6 @@
     background: #111827;
     color: #00eaff;
   }
-
   button {
     width: 100%;
     padding: 12px;
@@ -75,7 +70,6 @@
     cursor: pointer;
     margin-bottom: 10px;
   }
-
   table {
     width: 100%;
     margin-top: 20px;
@@ -88,15 +82,12 @@
     padding: 10px;
     text-align: center;
   }
-
   .summary {
     margin-top: 30px;
     padding: 15px;
     border: 1px solid #00eaff;
     border-radius: 10px;
   }
-
-  /* MODAL STYLING */
   #detailModal {
     display: none;
     position: fixed;
@@ -140,7 +131,6 @@
     font-weight:bold;
     cursor:pointer;
   }
-
   @media(max-width: 768px) {
     .main-wrapper {
       flex-direction: column;
@@ -151,23 +141,15 @@
 <body>
 
 <h2>𝐏𝐄𝐁𝐄𝐋𝐈𝐀𝐑 𝐓𝐀𝐍𝐆𝐆𝐔𝐇 𝐋𝐗𝐆𝐑𝐎𝐔𝐏</h2>
-
-<div class="scrolling-text">
-  <p>𝐊𝐚𝐥𝐚𝐮 𝐦𝐞𝐧𝐚𝐧𝐠 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐦𝐞𝐧𝐚𝐧𝐠. 𝐊𝐚𝐥𝐚𝐮 𝐤𝐚𝐥𝐚𝐡 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐤𝐚𝐥𝐚𝐡 𝐃𝐎𝐍𝐓𝐒 𝐅𝐀𝐋𝐒𝐄 𝐌𝐎𝐃𝐄𝐒𝐓𝐘.</p>
-</div>
+<div class="scrolling-text"><p>𝐊𝐚𝐥𝐚𝐮 𝐦𝐞𝐧𝐚𝐧𝐠 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐦𝐞𝐧𝐚𝐧𝐠. 𝐊𝐚𝐥𝐚𝐮 𝐤𝐚𝐥𝐚𝐡 𝐤𝐚𝐭𝐚𝐤𝐚𝐧 𝐤𝐚𝐥𝐚𝐡 𝐃𝐎𝐍𝐓𝐒 𝐅𝐀𝐋𝐒𝐄 𝐌𝐎𝐃𝐄𝐒𝐓𝐘.</p></div>
 
 <div class="main-wrapper" id="mainContainer">
   <div class="container">
+    <button style="background:orange;color:black" onclick="loginAdmin()">Login Admin</button>
 
-    <label>𝐍𝐀𝐌𝐀</label>
-    <input type="text" id="namaInput">
-
+    <label>𝐍𝐀𝐌𝐀</label><input type="text" id="namaInput">
     <label>𝐖𝐈𝐍/𝐋𝐎𝐒𝐄</label>
-    <select id="statusInput">
-      <option value="win">WIN</option>
-      <option value="lose">LOSE</option>
-    </select>
-
+    <select id="statusInput"><option value="win">WIN</option><option value="lose">LOSE</option></select>
     <label>𝐉𝐔𝐌𝐋𝐀𝐇 𝐁𝐄𝐓</label>
     <select id="betInput">
       <option value="2000">2.000</option>
@@ -175,9 +157,7 @@
       <option value="5000">5.000</option>
       <option value="10000">10.000</option>
     </select>
-
-    <label>𝐉𝐔𝐌𝐋𝐀𝐇 𝐏𝐄𝐌𝐀𝐈𝐍</label>
-    <input type="number" id="playerInput" min="1" value="1">
+    <label>𝐉𝐔𝐌𝐋𝐀𝐇 𝐏𝐄𝐌𝐀𝐈𝐍</label><input type="number" id="playerInput" min="1" value="1">
 
     <button onclick="tambahData()">Tambah</button>
     <button style="background:red;color:white" onclick="resetAll()">RESET ALL</button>
@@ -185,22 +165,14 @@
     <div class="summary" id="summaryList"></div>
 
     <table id="tabelData">
-      <thead>
-        <tr>
-          <th>Nama</th>
-          <th>Status</th>
-          <th>Jumlah Bet</th>
-        </tr>
-      </thead>
+      <thead><tr><th>Nama</th><th>Status</th><th>Jumlah Bet</th></tr></thead>
       <tbody></tbody>
     </table>
   </div>
 
   <div class="side-card">
     <h3 style="color:#00eaff;text-align:center">TOTAL PERTANDINGAN</h3>
-    <p id="totalMatchCount" style="font-size:40px;text-align:center;font-weight:bold;color:#00eaff;">
-      0
-    </p>
+    <p id="totalMatchCount" style="font-size:40px;text-align:center;font-weight:bold;color:#00eaff;">0</p>
   </div>
 </div>
 
@@ -232,9 +204,24 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 let dataList = [];
 
+// SIMPLE ADMIN
+let isAdmin = false;
+const ADMIN_PASSWORD = "admin123";
+
+function loginAdmin() {
+  const pw = prompt("Masukkan password admin:");
+  if(pw === ADMIN_PASSWORD){
+    isAdmin = true;
+    alert("Login admin berhasil!");
+  } else {
+    alert("Password salah!");
+  }
+}
+
 // READ DATABASE
 db.ref("betData").on("value", snap => {
-  dataList = snap.val() || [];
+  const val = snap.val();
+  dataList = val ? Object.values(val) : [];
   updateTable();
   updateSummary();
   updateMatchCount();
@@ -242,57 +229,55 @@ db.ref("betData").on("value", snap => {
 
 // ADD DATA
 function tambahData() {
-  const nama = namaInput.value.trim();
-  const status = statusInput.value;
-  const bet = parseInt(betInput.value);
-  const player = parseInt(playerInput.value);
+  if(!isAdmin) return alert("Hanya admin yang bisa mengubah data!");
+  const nama = document.getElementById("namaInput").value.trim();
+  const status = document.getElementById("statusInput").value;
+  const bet = parseInt(document.getElementById("betInput").value);
+  const player = parseInt(document.getElementById("playerInput").value);
+  if(!nama) return alert("Nama harus diisi!");
+  if(player < 1) return alert("Minimal 1 pemain!");
+  const totalBet = status==="win"? bet*player : bet;
 
-  if (!nama) return alert("Nama harus diisi!");
-  if (player < 1) return alert("Minimal 1 pemain");
-
-  let totalBet = status === "win" ? bet * player : bet;
-
-  dataList.push({ nama, status, bet: totalBet });
-
-  db.ref("betData").set(dataList);
+  const newKey = db.ref().child('betData').push().key;
+  db.ref('betData/' + newKey).set({nama,status,bet:totalBet});
 }
 
 // RESET ALL
 function resetAll() {
-  if (confirm("Hapus semua data?"))
-    db.ref("betData").set([]);
+  if(!isAdmin) return alert("Hanya admin yang bisa reset data!");
+  if(confirm("Hapus semua data?")) {
+    db.ref("betData").set({});
+    dataList = [];
+    updateTable();
+    updateSummary();
+    updateMatchCount();
+  }
 }
 
 // UPDATE TABLE
 function updateTable() {
   const tbody = document.querySelector("#tabelData tbody");
   tbody.innerHTML = "";
-  dataList.forEach(d => {
-    tbody.innerHTML += `
-      <tr>
-        <td>${d.nama}</td>
-        <td>${d.status}</td>
-        <td>${d.bet.toLocaleString()}</td>
-      </tr>`;
+  dataList.forEach(d=>{
+    tbody.innerHTML += `<tr><td>${d.nama}</td><td>${d.status}</td><td>${d.bet.toLocaleString()}</td></tr>`;
   });
 }
 
-// SUMMARY
+// UPDATE SUMMARY
 function updateSummary() {
   const sum = {};
-  dataList.forEach(d => {
-    if (!sum[d.nama]) sum[d.nama] = { win: 0, lose: 0 };
-    sum[d.nama][d.status] += d.bet;
+  dataList.forEach(d=>{
+    if(!sum[d.nama]) sum[d.nama]={win:0,lose:0};
+    sum[d.nama][d.status]+=d.bet;
   });
-
-  summaryList.innerHTML = "<h3>Rangkuman</h3>";
-  Object.keys(sum).forEach(n => {
+  const summaryList = document.getElementById("summaryList");
+  summaryList.innerHTML="<h3>Rangkuman</h3>";
+  Object.keys(sum).forEach(n=>{
     const bersih = sum[n].win - sum[n].lose;
     summaryList.innerHTML += `
       <p>
         <a href="#" onclick="showDetailModal('${n}'); return false;" style="color:#00eaff;text-decoration:underline;">
-          <b>${n}</b>
-        </a><br>
+        <b>${n}</b></a><br>
         Win: ${sum[n].win.toLocaleString()}<br>
         Lose: ${sum[n].lose.toLocaleString()}<br>
         <b>Total Bersih: ${bersih.toLocaleString()}</b>
@@ -300,50 +285,32 @@ function updateSummary() {
   });
 }
 
-// MODAL FUNCTION (Ringkas)
-function showDetailModal(nama) {
-  const data = dataList.filter(d => d.nama === nama);
-  const modal = document.getElementById('detailModal');
-  const modalTitle = document.getElementById('modalTitle');
-  const modalContent = document.getElementById('modalContent');
-
-  // Hitung total win dan lose
-  let totalWin = 0;
-  let totalLose = 0;
-  data.forEach(d => {
-    if (d.status === "win") totalWin += d.bet;
-    else totalLose += d.bet;
-  });
-
-  modalTitle.innerText = `Detail ${nama}`;
-  modalContent.innerHTML = `
+// MODAL DETAIL
+function showDetailModal(nama){
+  const data = dataList.filter(d=>d.nama===nama);
+  let totalWin=0,totalLose=0;
+  data.forEach(d=>{if(d.status==="win") totalWin+=d.bet; else totalLose+=d.bet;});
+  document.getElementById("modalTitle").innerText=`Detail ${nama}`;
+  document.getElementById("modalContent").innerHTML=`
     <p><b>Total Win:</b> ${totalWin.toLocaleString()}</p>
-    <p><b>Total Lose:</b> ${totalLose.toLocaleString()}</p>
-  `;
-
-  modal.classList.add('active');
+    <p><b>Total Lose:</b> ${totalLose.toLocaleString()}</p>`;
+  document.getElementById("detailModal").classList.add("active");
 }
 
-// CLOSE MODAL
-document.getElementById('closeModal').onclick = function() {
-  document.getElementById('detailModal').classList.remove('active');
+document.getElementById("closeModal").onclick = function(){
+  document.getElementById("detailModal").classList.remove("active");
 }
-window.onclick = function(event) {
-  const modal = document.getElementById('detailModal');
-  if (event.target == modal) {
-    modal.classList.remove('active');
-  }
+window.onclick = function(e){
+  if(e.target == document.getElementById("detailModal"))
+    document.getElementById("detailModal").classList.remove("active");
 }
 
-// TOTAL MATCH
-function updateMatchCount() {
-  let total = 0;
-  dataList.forEach(d => {
-    if (d.status === "win") total += 1;
-  });
+// UPDATE MATCH COUNT
+function updateMatchCount(){
+  let total=0;
+  dataList.forEach(d=>{if(d.status==="win") total++;});
   document.getElementById("totalMatchCount").innerText = total;
 }
 </script>
-
 </body>
 </html>
